<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/bar_search_group"
        layout="@layout/toolbar_layout" />

    <ListView
        android:id="@+id/lst_groups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar_search_group"
        android:layout_margin="@dimen/default_padding"
        android:divider="@null"
        android:dividerHeight="@dimen/s_padding"></ListView>

    <include
        android:id="@+id/progress"
        layout="@layout/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_height"
        android:layout_alignParentBottom="true" />

</RelativeLayout>